--- a/style.css
+++ b/style.css
@@ -149,3 +149,24 @@ skills-bar p{
 img {
   border-radius: 5px 5px 0 0;
 }
+* {
+  box-sizing: border-box;
+}
+
+.mainData {
+  display: flex;
+}
+
+.inputRow {
+  width: 100%;
+}
+
+.inputRow label {
+  display: inline-block;
+  width: 25%;
+}
+
+.inputRow input {
+  width: 70%;
+}
+
