--- a/style.css
+++ b/style.css
@@ -162,7 +162,7 @@ img {
     font-family: sans-serif;
 }
 
-.Input {s
+.Input {
   width: 100%;
 }
 
@@ -174,4 +174,43 @@ img {
 .Input input {
   width: 70%;
 }
+
+
+*{
+  margin: 0px;
+
+}
+body{
+  font-family: Arial;
+}
+
+.main{
+
+}
+.cards{
+  width:25%;
+  display : inline-block;
+  background-color: grey;
+  border-radius: 5px;
+  margin:40px;
+  box-shadow: 2px 2px 10px black;
+}
+
+#image .img{
+  width:100%;
+  border-top-right-radius: 5px;
+  border-top-left-radius: 5px;
+
+}
+.title{
+  text-align: center;
+  padding :10px;
+  font-size:10px;
+}
+.des{
+  text-align: center;
+  padding: 10px;
+  font-size: 13px;
+  }
+  
 
