--- a/query/query.css
+++ b/query/query.css
@@ -2,7 +2,9 @@
 body{
   margin:0px;
   font-family: "Lato" , sans-serif;
-    background-color:#1a6680;
+    
+background-image: url("img/img1.jpg");
+    
 }
 
 .body-container{
